aks/filestorage/templates/file-storage-api-hazelcast-service.yml
apiVersion: v1
kind: Service
metadata:
  name: file-storage-hazelcast
  namespace: default
  labels:
    app: file-storage
    service: file-storage
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: hazelcast
      port: 5701
  selector:
    app: file-storage
