aks/filestorage/templates/file-storage-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: file-storage
  namespace: default
  labels:
    app: file-storage
    service: file-storage
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: file-storage
