aks/filestorage/templates/azure-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: azure-services
  namespace: default
spec:
  hosts:
    - vtchk8sblueprinttfst.blob.core.windows.net
    - vtch-functions.azurewebsites.net
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
