aks/filestorage/templates/file-storage-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: file-storage
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - application-gateway
  http:
    - match:
        - uri:
            prefix: "/filestorage/"
        - uri:
            prefix: "/filestorage"
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 8080
            host: file-storage
